{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 37,
  "lineage": "ec6484cb-229d-3460-d6ca-44b938303cc3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "rionat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ed5d5f6229b5c39",
            "association_id": "eipassoc-027728b1902128fac",
            "domain": "vpc",
            "id": "eipalloc-02ed5d5f6229b5c39",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ebe6924fb015e1a3",
            "private_dns": "ip-192-168-22-15.ec2.internal",
            "private_ip": "192.168.22.15",
            "public_dns": "ec2-3-87-130-237.compute-1.amazonaws.com",
            "public_ip": "3.87.130.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.riomain",
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "rionat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b1d5ef507e25694",
            "association_id": "eipassoc-0759153230e33c703",
            "domain": "vpc",
            "id": "eipalloc-08b1d5ef507e25694",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07934d73b14e848a2",
            "private_dns": "ip-192-168-121-221.ec2.internal",
            "private_ip": "192.168.121.221",
            "public_dns": "ec2-54-84-217-140.compute-1.amazonaws.com",
            "public_ip": "54.84.217.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.riomain",
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "riomain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475600362560:internet-gateway/igw-0c1e48e20f1dca07d",
            "id": "igw-0c1e48e20f1dca07d",
            "owner_id": "475600362560",
            "tags": {
              "Name": "riomain"
            },
            "tags_all": {
              "Name": "riomain"
            },
            "vpc_id": "vpc-092ac5a7241102549"
          },
          "dependencies": [
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "riogw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ed5d5f6229b5c39",
            "connectivity_type": "public",
            "id": "nat-0b2e6a02b77535308",
            "network_interface_id": "eni-0ebe6924fb015e1a3",
            "private_ip": "192.168.22.15",
            "public_ip": "3.87.130.237",
            "subnet_id": "subnet-0e0e8b13fc8ed350f",
            "tags": {
              "Name": "rioNAT 1"
            },
            "tags_all": {
              "Name": "rioNAT 1"
            }
          },
          "dependencies": [
            "aws_eip.rionat1",
            "aws_internet_gateway.riomain",
            "aws_subnet.riopublic_1",
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "riogw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b1d5ef507e25694",
            "connectivity_type": "public",
            "id": "nat-0c947641e7c018bee",
            "network_interface_id": "eni-07934d73b14e848a2",
            "private_ip": "192.168.121.221",
            "public_ip": "54.84.217.140",
            "subnet_id": "subnet-069d2af020cf43730",
            "tags": {
              "Name": "rioNAT 2"
            },
            "tags_all": {
              "Name": "rioNAT 2"
            }
          },
          "dependencies": [
            "aws_eip.rionat2",
            "aws_internet_gateway.riomain",
            "aws_subnet.riopublic_2",
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rioprivate1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475600362560:route-table/rtb-0b8745742d00f187d",
            "id": "rtb-0b8745742d00f187d",
            "owner_id": "475600362560",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b2e6a02b77535308",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rioprivate1"
            },
            "tags_all": {
              "Name": "rioprivate1"
            },
            "timeouts": null,
            "vpc_id": "vpc-092ac5a7241102549"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.rionat1",
            "aws_internet_gateway.riomain",
            "aws_nat_gateway.riogw1",
            "aws_subnet.riopublic_1",
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rioprivate2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475600362560:route-table/rtb-08fdc78b2b49a385b",
            "id": "rtb-08fdc78b2b49a385b",
            "owner_id": "475600362560",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c947641e7c018bee",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rioprivate2"
            },
            "tags_all": {
              "Name": "rioprivate2"
            },
            "timeouts": null,
            "vpc_id": "vpc-092ac5a7241102549"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.rionat2",
            "aws_internet_gateway.riomain",
            "aws_nat_gateway.riogw2",
            "aws_subnet.riopublic_2",
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "riopublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475600362560:route-table/rtb-0c183be632e3d86b9",
            "id": "rtb-0c183be632e3d86b9",
            "owner_id": "475600362560",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c1e48e20f1dca07d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "riopublic"
            },
            "tags_all": {
              "Name": "riopublic"
            },
            "timeouts": null,
            "vpc_id": "vpc-092ac5a7241102549"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.riomain",
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rioprivate1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0814a3532d9e96123",
            "route_table_id": "rtb-0b8745742d00f187d",
            "subnet_id": "subnet-010311dc68750f3b2"
          },
          "dependencies": [
            "aws_eip.rionat1",
            "aws_internet_gateway.riomain",
            "aws_nat_gateway.riogw1",
            "aws_route_table.rioprivate1",
            "aws_subnet.rioprivate_1",
            "aws_subnet.riopublic_1",
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rioprivate2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0699dba023d9b442c",
            "route_table_id": "rtb-08fdc78b2b49a385b",
            "subnet_id": "subnet-0024f1e0d887b8bb4"
          },
          "dependencies": [
            "aws_eip.rionat2",
            "aws_internet_gateway.riomain",
            "aws_nat_gateway.riogw2",
            "aws_route_table.rioprivate2",
            "aws_subnet.rioprivate_2",
            "aws_subnet.riopublic_2",
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "riopublic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea52130c60d91830",
            "route_table_id": "rtb-0c183be632e3d86b9",
            "subnet_id": "subnet-0e0e8b13fc8ed350f"
          },
          "dependencies": [
            "aws_internet_gateway.riomain",
            "aws_route_table.riopublic",
            "aws_subnet.riopublic_1",
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "riopublic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058f5020cd04b4d23",
            "route_table_id": "rtb-0c183be632e3d86b9",
            "subnet_id": "subnet-069d2af020cf43730"
          },
          "dependencies": [
            "aws_internet_gateway.riomain",
            "aws_route_table.riopublic",
            "aws_subnet.riopublic_2",
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rioprivate_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475600362560:subnet/subnet-010311dc68750f3b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010311dc68750f3b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475600362560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rioprivate-us-east-1a",
              "kubernetes.io/cluster/rioeks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "rioprivate-us-east-1a",
              "kubernetes.io/cluster/rioeks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-092ac5a7241102549"
          },
          "dependencies": [
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rioprivate_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475600362560:subnet/subnet-0024f1e0d887b8bb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0024f1e0d887b8bb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475600362560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rioprivate-us-east-1b",
              "kubernetes.io/cluster/rioeks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "rioprivate-us-east-1b",
              "kubernetes.io/cluster/rioeks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-092ac5a7241102549"
          },
          "dependencies": [
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "riopublic_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475600362560:subnet/subnet-0e0e8b13fc8ed350f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0e8b13fc8ed350f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "475600362560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "riopublic-us-east-1a",
              "kubernetes.io/cluster/rioeks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "riopublic-us-east-1a",
              "kubernetes.io/cluster/rioeks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-092ac5a7241102549"
          },
          "dependencies": [
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "riopublic_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475600362560:subnet/subnet-069d2af020cf43730",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069d2af020cf43730",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "475600362560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "riopublic-us-east-1b",
              "kubernetes.io/cluster/rioeks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "riopublic-us-east-1b",
              "kubernetes.io/cluster/rioeks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-092ac5a7241102549"
          },
          "dependencies": [
            "aws_vpc.riomain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "riomain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475600362560:vpc/vpc-092ac5a7241102549",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-070f7d3ff8ba9e75e",
            "default_route_table_id": "rtb-08fc4f90ed5c5fa2e",
            "default_security_group_id": "sg-05b4b1618f788f195",
            "dhcp_options_id": "dopt-6c2c6317",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-092ac5a7241102549",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08fc4f90ed5c5fa2e",
            "owner_id": "475600362560",
            "tags": {
              "Name": "riomain"
            },
            "tags_all": {
              "Name": "riomain"
            }
          }
        }
      ]
    }
  ]
}